--- a/newton_search_1var/report.tex
+++ b/newton_search_1var/report.tex
@@ -41,7 +41,7 @@
 
 \begin{document}
 
-\section*{Newton line search algorithm}
+\section*{Newton-Raphson line search algorithm}
 
 Finding the minimizer(s) of $f$ is resemble to finding the root(s) of $f'$. From 
 $$f(x) = 10(x-1)^4 - 4\sin(3x)$$
@@ -55,11 +55,11 @@ Let $g(x) = f'(x)$. Now, we will use the Newton-Raphson method to find the root 
         &= x_k + \frac{40(x-1)^3 - 12\cos(3x)}{120(x-1)^2 + 36\sin(3x)}
 \end{align*}
 
-MATLAB can be very useful for this. The code used to solve this problem is adapted from the last homework. The \lstinline{FunctionName.m} is modified to
+The \lstinline{FunctionName.m} is modified to
 
 \lstinputlisting[language=Matlab]{FunctionName.m}
 
-The \lstinline{newton.m}, however, do not need to be modified at all.
+The \lstinline{newton.m} is provided here.
 
 \lstinputlisting[language=Matlab]{newton_1var.m}
 
