--- a/newton_root_finding/report.tex
+++ b/newton_root_finding/report.tex
@@ -41,7 +41,7 @@
 
 \begin{document}
 
-\section{}
+\section*{Newton's method to find a root of equations system.}
 
 This example tries to find any one of the roots of below nonlinear system:
 \begin{align*}
