--- a/minimizer_search_2var/report.tex
+++ b/minimizer_search_2var/report.tex
@@ -46,6 +46,9 @@
 
 \section*{Searching minimizer of 2-variable function.}
 
+This example tries to find a minimizer of this Rosenblock function:
+$$f(x_1,x_2) = 100( x_2 - x_1^2 )^2 + ( 1 - x_1 )^2$$
+
 The \lstinline{FunctionName.m} is modified to
 
 \lstinputlisting[language=Matlab]{FunctionName.m}
