--- a/golden_section_search/report.tex
+++ b/golden_section_search/report.tex
@@ -49,11 +49,11 @@ The code for \lstinline{golden.m} is written as follow:
 
 \lstinputlisting[language=Matlab]{golden.m}
 
-The code for function $f$ is written as follow:
+The code for the function $f$ is written as follows:
 
 \lstinputlisting[language=Matlab]{f.m}
 
-This is the script used to test the function and printing the result. The easiest systematic way to find suitable $b$ is to increment its value until it works.
+This is the script used to test the function and print the result. The easiest systematic way to find a suitable $b$ is to increment its value until it works.
 
 \lstinputlisting[language=Matlab]{script_test.m}
 
