--- a/newton_search_1var/report.tex
+++ b/newton_search_1var/report.tex
@@ -73,7 +73,7 @@ And the printed result is written below:
 
 So, the value of a minimizer of $f$ is 0.5969431100.
 
-To determine whether $f$ has only one minimizer, let's analyze from the function derivative: 
+To determine whether $f$ has only one minimizer, let's analyze the function derivative: 
 $$f'(x) = 40(x-1)^3 - 12\cos(3x)$$
 
 Plot the graph of $40(x-1)^3$ and $12\cos(3x)$ in the same area.
@@ -84,6 +84,6 @@ Plot the graph of $40(x-1)^3$ and $12\cos(3x)$ in the same area.
     \caption{The graph of $40(x-1)^3$ and $12\cos(3x)$.}
 \end{figure}
 
-From the graph, for $x < 0.597$, $40(x-1)^3 < 12\cos(3x)$ so $f'(x)$ is always negative. For $x \geq 0.597$, $40(x-1)^3 \geq 12\cos(3x)$ so $f'(x)$ is always positive. Therefore $f'(x)$ has only one root, then $f(x)$ has only one minimizer.
+From the graph, for $x < 0.597$, $40(x-1)^3 < 12\cos(3x)$ so $f'(x)$ is always negative. For $x \geq 0.597$, $40(x-1)^3 \geq 12\cos(3x)$ so $f'(x)$ is always positive. Therefore, $f'(x)$ has only one root, then $f(x)$ has only one minimizer.
 
 \end{document}
